# MyVideoEdit

./: CMakeLists.txt  README.md
Resources/: MyVideoUI.qrc
src/: MyAudio.cpp  MyFilter.cpp  MyImagePro.cpp  MyVideoEditThread.cpp  MyVideoEditWidget.cpp  main.cpp  myvideoeditui.cpp
src/Forms/: myvideoeditui.ui
src/Headers/: MyAudio.h  MyFilter.h  MyImagePro.h  MyVideoEditThread.h  MyVideoEditWidget.h  myvideoeditui.h
